# MultimodalData

./: .gitignore  README.md  probingpanda_endeffector-config.json  pyproject.toml
audio_stream/: viz.py
camera_steam/: base_video_stream.py  digit_video_stream.py  raspi_video_stream.py  usb_video_stream.py
camera_stream/: __init__.py  base_video_stream.py  digit_video_stream.py  realsense_stream.py  usb_video_stream.py
config/: bc.yaml
config/object/: black_clamp.yaml  black_marker.yaml  craftsman_screw_driver_41581.yaml  gsmini_box.yaml  phone_1.yaml  red_punch.yaml  red_small_scissor.yaml  usb_double.yaml  wrench.yaml
docs/plans/: 2026-03-17-twm-data-collection-design.md  2026-03-17-twm-data-collection-impl.md  (+3 more)
ft_sensor/: __init__.py  base_ft_stream.py  mms101_stream.py
misc/: utils.py
optitrack/: optitrack_stream.py
probing_panda/: __init__.py  base_video_stream.py  bc_policy.py  displacement_data_collection.py  raspi_video_stream.py  usb_video_stream.py
probing_panda.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: bc_online_eval.py  bc_traj_collection.py  confirm_camera_order.py  disp_collection.py  guide_mode_pose.py  switch_insertion_full.py  test_gripper.py  test_raspi_cam.py  train_bc.py  twm_data_collection.py  usb_insertion_full.py  vga_insertion_full.py  visualize_bc_devices.py  visualize_twm_data.py
tests/: test_hdf5_writer.py  test_optitrack_stream.py  test_realsense_stream.py  test_visualize.py
twm/: README.md  benchmark_compression.py  compress_h5.py  data_collection.py  visualize.py  visualize_projection.py
(+40 files in other folders)
