[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "probing_panda"
version = "2024.2.5"
requires-python = ">= 3.8"
dependencies = [
    "numpy",
    "hydra-core",
    "tqdm",
    "autolab_core",
    "scipy",
    "frankapy",
    "gelsight",
    "pillow",
    "opencv-python",
    "digit-interface",
]

[tool.setuptools]
packages = ["probing_panda"]